# CameraSystem

./: .coveragerc  .gitattributes  .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  pytest.sh
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: -----.md  custom.md  main_template.md
.github/workflows/: main.yml  pytest.yml
source/: .coveragerc  BlockBingoPointList.py  Camera.py  CameraSystem.py  Color.py  GetCirclePoint.py  HackEV.py  Image.py  PointList.py  PrepareGarage.py  block_bingo.py  clipping_number.py  coverage.xml  cross_circles_path.py  get_point.py  onMouse.py  sample_server.py  test_Camera.py
source/BlockBingo/: block_circles_path.py
source/DetectionBlock/: BlockBingo.py  test_BlockBingo.py  test_CrossCircle.py  test_Line.py
source/DetectionNumber/: DetectionNumber.py  clipping_number.py  test_detectionNumber.py
source/PC/: SerialInterface.py  block_bingo.py  clipping_number.py  requirements.txt  sample_server.py  sample_types.py
source/block_bingo/: BlackBlockCommands.py  BlockBingoCoordinate.py  BlockBingoSolver.py  BlockCirclesPath.py  CrossCirclesPath.py  README.md  RuleBook.py  black_block_commands.py  block_bingo_coordinate.py  block_bingo_solver.py  block_circles_path.py  commands.py  cross_circles_path.py  rule_book.py  test_black_block_commands.py  test_black_circles_path.py  test_block_bingo_coordinate.py  test_block_bingo_solver.py  test_block_circles_path.py  test_commands.py  test_rule_book.py
source/bluetooth/: Bluetooth.py  README.md  search_serial_port.py  test_Bluetooth.py  (+1 more)
(+55 files in other folders)
