[tool.poetry]
name = "CameraSystem"
version = "2019.10.29"
description = ""
authors = ["Futa Hirakoba <korosuke613613@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.17"
opencv-python = "^4.1"
pyserial = "^3.4"
chainer = "^6.5"
matplotlib = "^3.1"
tqdm = "^4.36"
opencv-contrib-python = "^4.1"
pillow = "^6.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.4"
coveralls = "^1.8"
pytest = "^5.2"
pytest-cov = "^2.8"
coverage = "^4.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
